# hermitage

./: Readme.md  pyproject.toml
hermitage/: __init__.py
hermitage/adapters/: __init__.py  constraints.py  cqea.py  transformers.py
hermitage/definition/: contracts.py
hermitage/definitions/contracts/: adapters.py
hermitage/mappers/: __init__.py  invoice.py
hermitage/notation/: __init__.py  default.py
hermitage/parsers/: query.py
tests/adapters/: conftest.py  definitions.py  test_cqea.py  test_transformers.py
