[tool.poetry]
name = "hermitage"
version = "0.2.3"
description = "Universal storage access framework"
repository = "https://github.com/smairon/hermitage"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.2.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"