[tool.poetry]
name = "hermitage"
version = "0.3.4"
description = "Universal storage access framework"
repository = "https://github.com/smairon/hermitage"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
mypy= "^1.11.1"

[tool.mypy]
disable_error_code = "import-untyped"